# song2quiz

./: .coverage  .env  .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  README.zh-CN.md  conftest.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  ruff.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  security.yml  tests.yml
docs/: installation.mdx  introduction.mdx  mint.json
docs/architecture/: overview.mdx  project-structure.mdx
docs/cli/: generation.mdx  preprocessing.mdx
docs/cn/: installation.mdx
docs/cn/architecture/: overview.mdx  project-structure.mdx
docs/cn/cli/: generation.mdx  ingestion.mdx  preprocessing.mdx  run-pipeline.mdx
docs/cn/development/: contributing.mdx  testing.mdx
docs/development/: testing.mdx
docs/en/: installation.mdx
docs/en/architecture/: overview.mdx
docs/en/cli/: ingestion.mdx  preprocessing.mdx
docs/en/development/: contributing.mdx  testing.mdx
scripts/: test.sh  test_ci.sh
src/constants/: api.py
src/constants/lyrics_analysis/: __init__.py  (+5 more)
src/resources/: en_50k.txt
src/scripts/: analyze_parentheticals.py  analyze_semantic_units.py  analyze_vocabulary.py  ingest_song.py  preprocess_song.py  run_pipeline.py  test_openrouter.py  test_semantic_units.py
src/services/: akash.py  genius.py  langfuse.py  lrclib.py  openrouter.py
src/utils/: settings.py
tests/: conftest.py
tests/scripts/: test_ingest_song.py  test_preprocess_song.py  test_run_pipeline.py
typings/langfuse/: __init__.pyi
typings/ruamel/: __init__.pyi
(+38 files in other folders)
