[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "song2quiz"
version = "0.1.0"
description = "A tool for generating language learning exercises from song lyrics"
authors = [
    {name = "technohippies"}
]
requires-python = ">=3.9"
dependencies = [
    "prefect>=3.0.0",
    "click>=8.0.0",
]

[tool.setuptools]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --cov=src --cov-report=term-missing"